src/abstract_client.cpp
@@ -2355,7 +2355,6 @@ void AbstractClient::createDecoration(const QRect &oldGeometry)
     }
     setDecoration(decoration);
     moveResize(QRect(oldGeometry.topLeft(), clientSizeToFrameSize(clientSize())));
-    updateDecorationInputShape();
 
     Q_EMIT geometryShapeChanged(this, oldGeometry);
 }
@@ -2363,18 +2362,20 @@ void AbstractClient::createDecoration(const QRect &oldGeometry)
 void AbstractClient::destroyDecoration()
 {
     setDecoration(nullptr);
-    m_decoration.inputRegion = QRegion();
+    resize(clientSizeToFrameSize(clientSize()));
 }
 
 void AbstractClient::setDecoration(KDecoration2::Decoration *decoration)
 {
     m_decoration.decoration.reset(decoration);
+    updateDecorationInputShape();
     Q_EMIT decorationChanged();
 }
 
 void AbstractClient::updateDecorationInputShape()
 {
     if (!isDecorated()) {
+        m_decoration.inputRegion = QRegion();
         return;
     }
 
